--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "chalk": "^3.0.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
-    "socket.io": "^2.3.0",
-    "uuid": "^3.4.0"
+    "shortid": "^2.2.15",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {},
   "scripts": {
